# quilt

./: .buildinfo  .gitignore  .gitmodules  LICENSE  Makefile  README.md  Untitled.ipynb  autodoc_cpp.html  autodoc_py.html  b_functions.txt  basal_ganglia.ipynb  callgrind.out.27765  callgrind.out.445483  callgrind.out.450898  callgrind.out.596474  callgrind.out.605804  callgrind.out.6826  callgrind.out.7107_before  callgrind.out.9570  check_poisson.py  check_weights_delay.py  cortex.txt  cortex_interpolated.txt  dependencies.yaml  example.ipynb  genindex.html  index.html  installation.html  massif.out.41576  massif.out.5686  meson.build  objects.inv  osc_history.txt  osc_interpol.txt  output.txt  performance.txt  plot.py  plot_bfunc.py  plot_cortex.py  plot_inhom_poiss.py  (+18 more)
.github/workflows/: ci.yml  deploy_docs.yml
CPGs/: Untitled.ipynb  basic_net.yaml  cpg.py  few_cells.ipynb  few_cells_net.yaml  neurons.yaml
_modules/: index.html
_modules/quilt/: builder.html
_sources/: autodoc_cpp.rst.txt  autodoc_py.rst.txt  index.rst.txt  installation.rst.txt  usage.rst.txt
_sources/cpp_docs/: index.rst.txt
bg_analysis/: analysis.ipynb  basal_ganglia.ipynb  basal_ganglia.py  basal_ganglia_dopamine_susceptibility.yaml  basal_ganglia_network.yaml  basal_ganglia_neurons.yaml  basal_ganlglia PD_susceptibility.yaml  basal_ganlglia_PD_susceptibility.yaml  beegees.py  dbs.yaml  dispersive_susceptibility.yaml  entropy2.csv  lindahl_dopamine_susceptibility.yaml  lindahl_dopamine_susceptibility_noctx.yaml  lindahl_dopamine_susceptibility_noctx_disentangled.yaml  lindahl_network.yaml  lindahl_neurons.yaml  multidim_dopamine_06.csv  multidim_dopamine_08.csv  multidim_dopamine_08_100.csv  multidim_dopamine_2.csv  multidim_dopamine_3.csv  multidim_dopamine_4.csv  multidim_dopamine_5.csv  multidim_dopamine_around_diagonal.csv  multidim_dopamine_around_diagonal_2.csv  multidim_dopamine_around_diagonal_3.csv  multidim_dopamine_around_diagonal_4.csv  multidim_dopamine_around_diagonal_5.csv  multidim_dopamine_diagonal.csv  multidim_dopamine_diagonal_3_trials.csv  multidim_dopamine_diagonal_4_trials.csv  multidim_dopamine_long.csv  multidim_dopamine_long_disentangled.csv  multidim_dopamine_long_disentangled_manyfeatures.csv  ortone_network.yaml  ortone_network_dispersive.yaml  ortone_neurons.yaml  scale_susceptibility.yaml  transfer_entropy.ipynb
cortical/: cortex.ipynb
cpp_docs/: index.html
docs/: Doxyfile  conf.py  conf.py.save  index.rst  installation.rst  usage.rst
docs/doxyoutput/html/: annotated.html  base__objects_8hpp_source.html  classEvolutionContext-members.html  classEvolutionContext.html  classEvolutuionContext.html  classHierarchicalID-members.html  classHierarchicalID.html  classHierarchicalID__coll__graph.map  classHierarchicalID__coll__graph.md5  classLink-members.html  classLink.html  classNeuroParam-members.html  classNeuroParam.html  classNeuroParam__coll__graph.map  classNeuroParam__coll__graph.md5  classNeuroParam__inherit__graph.map  classNeuroParam__inherit__graph.md5  classNeuron-members.html  classNeuron.html  classNeuron__coll__graph.map  classNeuron__coll__graph.md5  classNeuron__inherit__graph.map  (+117 more)
docs/latex/: annotated.tex  classEvolutionContext.tex  classEvolutuionContext.tex  classHierarchicalID.tex  classHierarchicalID__coll__graph.md5  classLink.tex  classNeuroParam.tex  classNeuroParam__coll__graph.md5  classNeuroParam__inherit__graph.md5  classNeuron.tex  classNeuron__coll__graph.md5  classNeuron__inherit__graph.md5  classOscillator.tex  classOscillatorNetwork.tex  classOscillator__inherit__graph.md5  classParaMap.tex  classPopCurrentInjector.tex  classPopulation.tex  classPopulationSpikeMonitor.tex  classPopulationStateMonitor.tex  classPopulation__coll__graph.md5  classProjection.tex  classSpike.tex  classSpikingNetwork.tex  classSpikingNetwork__coll__graph.md5  classSynapse.tex  classaeif__neuron.tex  classaeif__neuron__coll__graph.md5  classaeif__neuron__inherit__graph.md5  classaeif__param.tex  classaeif__param__coll__graph.md5  classaeif__param__inherit__graph.md5  classaqif__neuron.tex  classaqif__neuron__coll__graph.md5  classaqif__neuron__inherit__graph.md5  classaqif__param.tex  classaqif__param__coll__graph.md5  classaqif__param__inherit__graph.md5  classharmonic.tex  classharmonic__coll__graph.md5  (+8 more)
multiscale/: sim.py  transducers.yaml
optimisation/: bg_neurons.yaml  performance.txt  test_performances.py  valgrind-python.supp
profiling/: callgrind.out.24453  callgrind.out.43866  massif.out.44792  massif_10.000  massif_1000  massif_5000
quilt/: __qinit__.py  builder.py  dependencies.yaml  eeg.py  meson.build  utils.py  view.py
quilt/.github/.workflows/: ci.yml
quilt/core/: base.cpp  base_objects.cpp  devices.cpp  links.cpp  main.cpp  meson.build  multiscale.cpp  network.cpp  neuron_models.cpp  neurons_base.cpp  oscillators.cpp  test_file.cpp
quilt/core/include/: base.hpp  base_objects.hpp  devices.hpp  links.hpp  multiscale.hpp  network.hpp  neuron_models.hpp  neurons_base.hpp  oscillators.hpp
quilt/interface/: base.pxd  base.pyx  base_objects.pxd  base_objects.pyx  cinterface.pxd  meson.build  multiscale.pyx  oscill.pxd  oscill.pyx  spiking.cpp  spiking.pxd  spiking.pyx
quilt/src_cpp/: base_objects.cpp  devices.cpp  main.cpp  network.cpp  neuron_models.cpp  neurons.cpp  neurons_base.cpp  oscillators.cpp  test_file.cpp
quilt/src_cpp/include/: base_objects.hpp  devices.hpp  network.hpp  neuron_models.hpp  neurons.hpp  neurons_base.hpp  oscillators.hpp
quilt/src_cython/: base_objects.pxd  base_objects.pyx  cinterface.pxd  neur.pyx  oscill.pyx  spiking.pyx
tests/: basal_ganglia_network.yaml  basal_ganglia_neurons.yaml  main.cpp  notest_TVB.py  notest_jr.py  notest_mem_alloc.py  plot_osc.py  small_spiking.yaml  spiking.yaml  test_NCE.py  test_TVB.py  test_evolution.yaml  test_interface.py  test_multiscale.py  test_neurons.yaml  test_oscill_interface.py  test_params.yaml  test_performances.py  test_spiking.yaml  test_spiking_interface.py  test_susceptibility.yaml  test_susceptibility_2.yaml  test_transducers.yaml  tets_variant.cpp
(+64 files in other folders)
