project('quilt',
        'cpp','cython',
        default_options: [
            'buildtype=release',
            'b_ndebug=if-release',
            'optimization=3',
            'c_std=c17',
            'cpp_std=c++17'
        ],
# DO NOT CHANGE MANUALLY
# use `bumpver update` instead
version: '0.4.2'
)

subdir('quilt')