[build-system]
requires = ["setuptools>=61.0", "wheel", "meson-python", "numpy", "build", "cython"]
build-backend = "mesonpy"

[project]
name = "quilt"
description = "A neural multiscale simulator"
authors = [
    { name = "Gianluca Becuzzi", email = "becuzzigianluca#gmail.com" }
]
dependencies = ["numpy"]

[tool.poetry.dependencies]
python = "^3.8"
Cython = "3.0.7"
numpy = "1.26.3"
matplotlib = "3.8.2"
rich = "13.7.0"
PyYAML = "6.0.1"
pytest = "^6.0"
wurlitzer = "^3.0"
scipy = "^1.7"

[bumpver]
current_version = "0.1.1"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version to {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = true
push = true

[bumpver.file_patterns]
"setup.py" = [
    'version="{version}",$',
]
"quilt/__qinit__.py" = [
    '^__version__ = "{version}"$',
]
"pyproject.toml" = [
    '^current_version = "{version}"$',
]