[build-system]
requires = ["setuptools>=61.0", "wheel", "meson-python", "numpy", "build", "cython"]
build-backend = "mesonpy"

[project]
name = "quilt"
dynamic = ["version"]
description = "A neural multiscale simulator"
authors = [{name = "Gianluca Becuzzi", email = "becuzzigianluca@gmail.com"}]


dependencies = [
    "numpy==1.26.3",
    "matplotlib==3.8.2",
    "rich==13.7.0",
    "PyYAML==6.0.1",
    "wurlitzer>=3.0",
    "scipy>=1.7"
]

[project.optional-dependencies]
test = [
    "pytest==6.2.5",
    "pytest-cov==3.0.0",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "breathe"
]

[bumpver]
current_version = "0.2.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version to {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = true
push = true

[bumpver.file_patterns]
"setup.py" = [
    'version="{version}",$',
]
"quilt/__qinit__.py" = [
    '^__version__ = "{version}"$',
]
"pyproject.toml" = [
    '^current_version = "{version}"$',
]
"meson.build" = [
    "^version: '{version}'$",
]