[build-system]
requires = [
    "setuptools>=61.0", 
    "meson==1.5.0", 
    "ninja==1.11.1.1", 
    "numpy==1.26.3", 
    "meson-python==0.16.0", 
    "Cython==3.0.11"]

build-backend = "mesonpy"

[project]
name = "quilt"
dynamic = ["version"]
description = "A multiscale neural simulator"
authors = [{name = "Gianluca Becuzzi", email = "becuzzigianluca@gmail.com"}]

dependencies = [
    "numpy==1.26.3",
    "matplotlib>=3.10",
    "rich==13.7.0",
    "PyYAML==6.0.1",
    "scipy>=1.7",
    "mne>=1.9.0"
]

[project.optional-dependencies]
test = [
    "pytest==6.2.5",
    "pytest-cov==3.0.0",
]

docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "breathe"
]

dev = [
    "setuptools>=61.0", 
    "meson==1.5.0", 
    "ninja==1.11.1.1", 
    "numpy==1.26.3", 
    "meson-python==0.16.0", 
    "Cython==3.0.11",
    "bumpver",
]

view = [
    "ipywidgets",
    "pyvista",
    "trame",
    "vtk",
    "trame-vtk",
    "trame-vuetify",
]

[bumpver]
current_version = "0.6.1"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version to {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = true
push = true

[bumpver.file_patterns]
"quilt/__qinit__.py" = [
    '^__version__ = "{version}"$',
]
"pyproject.toml" = [
    '^current_version = "{version}"$',
]
"meson.build" = [
    "^version: '{version}'$",
]

"docs/conf.py" = [
    "^release = '{version}'$"
]